Made a 404 page, fixed link to mediums page, corrected a name in team, made custom scrollbar, linked logo in nav to homepage

--- a/src/sass/_basic.scss
+++ b/src/sass/_basic.scss
@@ -7,6 +7,22 @@ $pink: rgba(255, 51, 85, 0.85);
   background: linear-gradient(to right, #ec008c, #fc6767);
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: $pink; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #f93959; 
+}
+
 html,
 body {
   height: 100%;
